# tg-bot

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/versions/: 20250310_f7d563e90f2c_.py
src/: main.py
src/application/uow/: uow.py
src/application/use_cases/auth/: auth.py  session_tokens.py
src/application/use_cases/waitlist_items/: count_items.py  create_item.py
src/config/: app.py  tg_api.py
src/domain/messages/: waitlist_items_messages.py
src/domain/models/: __init__.py  waitlist_items.py
src/domain/repositories/: waitlist_items.py
src/infrastructure/aiogram/: tg_bot.py
src/infrastructure/database/: base.py
src/infrastructure/fastapi/: app.py
src/ui/rest_api/: __init__.py  router.py
src/ui/tg_api/commands/: start.py
src/utils/: parse_start_command_args.py
